[package]
name = "oms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0" 
actix-cors = "0.6.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
tokio-websockets = { version = "0.5.0", features = ["client", "fastrand", "server", "sha1_smol"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tungstenite = "0.15.0"
tokio-tungstenite = "0.15"
reqwest = "0.11"
http = "1.0.0"