[package]
name = "oms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0" 
actix-cors = "0.6.0"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
tokio-websockets = { version = "0.5.0", features = ["client", "fastrand", "server", "sha1_smol"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tungstenite = "0.15.0"
tokio-tungstenite = "0.16"
reqwest = "0.11"
http = "1.0.0"
local-ip-address = "0.4"
thiserror = "1.0"
tokio = {version = "1.14.0", features = ["full"]}
tokio-postgres = "^0.7.10"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
chrono = { version = "0.4.10", features = ["serde"] }
bigdecimal = "0.3.1"
pg_bigdecimal = "0.1.5"
dotenv = "0.15"